--- a/index.pug
+++ b/index.pug
@@ -5,8 +5,18 @@ html
         link(rel="stylesheet", href="/styles/index.css")
         link(rel="stylesheet", href="https: /2.cdn.wisboo.com/fonts/icons-wisboo/style.css")
     body
-      navbar 
-        h3 Ventas de la academia
-        ul 
-          li Exportar
-          li Registrar una venta
+      header
+        section
+          ul(class="sales")
+            li Ventas de la academia
+          ul(class="options") 
+            button Exportar
+            button Registrar una venta
+        br
+        br
+        br    
+        hr    
+        article 
+          section 
+            div
+              h4 Cant de ventas  
