--- a/index.pug
+++ b/index.pug
@@ -17,6 +17,20 @@ html
         br    
         hr    
         article 
-          section 
-            div
-              h4 Cant de ventas  
+          section(class="earnings")
+            div(class="card")
+              h5 Cantidad de ventas
+              h1 322
+              h6 Últimos 60 días
+            div(class="card")
+              h5 Recaudo (MXN) 
+              h1 $ 77322 MXN 
+              h6 04/10/2020 - 04/12/2020
+            div(class="card") 
+              h5 Recaudo (USD) 
+              h1 $ 10420 USD
+              h6 Todos los tiempos 
+            div(class="card")
+              h5 Recaudo (ARS)
+              h1 257000 ARS
+              h6 04/10/2020 - 04/12/2020
