--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Oswald&family=The+Nautigal:wght@700&display=swap");
 body {
-  background-color: #ececeb;
+  background-color: #eeeeee;
   font-family: 'Be Vietnam Pro', sans-serif;
 }
 
 header {
   margin: 50px;
+  margin-right: 90px;
 }
 
 .sales {
@@ -29,5 +30,26 @@ hr {
 
 h4 {
   padding-top: 100px;
+}
+
+.earnings {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-left: 40px;
+}
+
+.card {
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  padding: 2px 60px;
+  border-radius: 10px;
+  background-color: white;
+  width: 150px;
 }
 /*# sourceMappingURL=index.css.map */
