Created the main content's structure.
The main content of the page, regarding creator's earnings.

--- a/index.pug
+++ b/index.pug
@@ -34,3 +34,15 @@ html
               h5 Recaudo (ARS)
               h1 257000 ARS
               h6 04/10/2020 - 04/12/2020
+        main
+          div(class="mainContent")
+            div(class="filters")
+              ul
+                input(placeholder='Busca por #orden o comprador') 
+                select
+                  option Curso
+                select 
+                  option Estado
+                select 
+                  option Medio de Pago
+                input(type='date')      
