--- a/styles/index.css
+++ b/styles/index.css
@@ -40,6 +40,7 @@ h4 {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   margin-left: 40px;
+  margin-top: 30px;
 }
 
 .card {
@@ -51,5 +52,48 @@ h4 {
   border-radius: 10px;
   background-color: white;
   width: 150px;
+}
+
+.mainContent {
+  background-color: 255, 255, 255;
+  height: 500px;
+}
+
+.mainContent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #ffffff;
+  margin-top: 30px;
+  border-radius: 10px;
+  border: solid 1px;
+  border-color: #b8b7b5;
+  height: 500px;
+  padding-top: 36px;
+  margin-bottom: 10px;
+  width: 1125px;
+  margin-left: 55px;
+}
+
+.mainContent .filters {
+  margin-right: 40px;
+}
+
+.mainContent input {
+  width: 300px;
+  height: 22px;
+}
+
+.mainContent select {
+  width: 130px;
+  height: 28px;
+}
+
+.mainContent input, .mainContent select {
+  border-radius: 4px;
+  border-color: #b8b7b5;
 }
 /*# sourceMappingURL=index.css.map */
