Added some styles.
Added styling to the buttons.

--- a/index.pug
+++ b/index.pug
@@ -10,13 +10,13 @@ html
           ul(class="sales")
             li Ventas de la academia
           ul(class="options") 
-            button Exportar
-            button Registrar una venta
+            button(id="btn") EXPORTAR 
+            button(id="btn1") REGISTRAR UNA VENTA
         br
         br
         br    
         hr    
-        article 
+      article 
           section(class="earnings")
             div(class="card")
               h5 Cantidad de ventas
@@ -34,7 +34,7 @@ html
               h5 Recaudo (ARS)
               h1 257000 ARS
               h6 04/10/2020 - 04/12/2020
-        main
+      main
           div(class="mainContent")
             div(class="filters")
               ul
