--- a/styles/index.css
+++ b/styles/index.css
@@ -24,6 +24,37 @@ ul {
   float: right;
 }
 
+#btn {
+  border-radius: 6px;
+  font-family: Arial;
+  color: #616161;
+  font-size: 11px;
+  background: #ffffff;
+  padding: 7px 7px 7px 7px;
+  border: solid #c2c2c2 2px;
+  text-decoration: none;
+}
+
+#btn .btn:hover {
+  text-decoration: none;
+}
+
+#btn1 {
+  border-radius: 6px;
+  font-family: 'Be Vietnam Pro', sans-serif;
+  color: #ffffff;
+  font-size: 11px;
+  background: #b32296;
+  padding: 5px 5px 5px 5px;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+#btn1 #btn:hover {
+  background: #b32296;
+  text-decoration: none;
+}
+
 hr {
   margin-left: 40px;
 }
@@ -39,8 +70,9 @@ h4 {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  margin-left: 40px;
   margin-top: 30px;
+  margin: 50px;
+  margin-right: 50px;
 }
 
 .card {
@@ -55,17 +87,12 @@ h4 {
 }
 
 .mainContent {
-  background-color: 255, 255, 255;
-  height: 500px;
-}
-
-.mainContent {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background-color: #ffffff;
   margin-top: 30px;
   border-radius: 10px;
@@ -73,9 +100,9 @@ h4 {
   border-color: #b8b7b5;
   height: 500px;
   padding-top: 36px;
-  margin-bottom: 10px;
-  width: 1125px;
-  margin-left: 55px;
+  margin-bottom: 50px;
+  width: 1180px;
+  margin-left: 77px;
 }
 
 .mainContent .filters {
@@ -83,7 +110,7 @@ h4 {
 }
 
 .mainContent input {
-  width: 300px;
+  width: 340px;
   height: 22px;
 }
 
