Implemented some styling on fonts.
Added styles to the cards' fonts.

--- a/index.pug
+++ b/index.pug
@@ -19,21 +19,21 @@ html
       article 
           section(class="earnings")
             div(class="card")
-              h5 Cantidad de ventas
+              h5(class="cardTitle") Cantidad de ventas
               h1 322
-              h6 Últimos 60 días
+              h6(class="cardDate") Últimos 60 días
             div(class="card")
-              h5 Recaudo (MXN) 
+              h5(class="cardTitle") Recaudo (MXN) 
               h1 $ 77322 MXN 
-              h6 04/10/2020 - 04/12/2020
+              h6(class="cardDate") 04/10/2020 - 04/12/2020
             div(class="card") 
-              h5 Recaudo (USD) 
+              h5(class="cardTitle") Recaudo (USD) 
               h1 $ 10420 USD
-              h6 Todos los tiempos 
+              h6(class="cardDate") Todos los tiempos 
             div(class="card")
-              h5 Recaudo (ARS)
+              h5(class="cardTitle") Recaudo (ARS)
               h1 257000 ARS
-              h6 04/10/2020 - 04/12/2020
+              h6(class="cardDate") 04/10/2020 - 04/12/2020
       main
           div(class="mainContent")
             div(class="filters")
