--- a/styles/index.css
+++ b/styles/index.css
@@ -86,6 +86,15 @@ h4 {
   width: 150px;
 }
 
+.cardTitle {
+  color: #949494;
+  font-weight: 600;
+}
+
+.cardDate {
+  color: #c2c0c0;
+}
+
 .mainContent {
   display: -webkit-box;
   display: -ms-flexbox;
