--- a/index.pug
+++ b/index.pug
@@ -15,7 +15,7 @@ html
         br
         br
         br    
-        hr    
+        hr(id="headerDivider")    
       article 
           section(class="earnings")
             div(class="card")
@@ -45,4 +45,21 @@ html
                   option Estado
                 select 
                   option Medio de Pago
-                input(type='date')      
+                input(type='date')
+            div 
+              ul(class="categories") 
+                h6 # Orden 
+                h6 # Curso 
+                h6(class="salesData") Comprador
+                h6(class="salesData") Fecha 
+                h6(class="salesData") Estado 
+                h6(class="salesData") Ganancias    
+            hr(class="dataDivider")
+            table 
+              tr 
+                td(class="productOrder") 10063-0021
+                td(class="productOrder") Baby Monitor Technology
+                td(class="tableData") Aaron Almaraz 
+                td(class="tableData") 19 Dec 2020
+                td(class="tableData") Comprobante
+                td(class="tableData") USD $50
