--- a/styles/index.css
+++ b/styles/index.css
@@ -55,7 +55,7 @@ ul {
   text-decoration: none;
 }
 
-hr {
+#headerDivider {
   margin-left: 40px;
 }
 
@@ -93,15 +93,10 @@ h4 {
 
 .cardDate {
   color: #c2c0c0;
+  font-weight: 500;
 }
 
 .mainContent {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   background-color: #ffffff;
   margin-top: 30px;
   border-radius: 10px;
@@ -131,5 +126,37 @@ h4 {
 .mainContent input, .mainContent select {
   border-radius: 4px;
   border-color: #b8b7b5;
+}
+
+.mainContent .categories {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-right: 50px;
+  color: #797979;
+  font-weight: 100;
+}
+
+.mainContent .salesData {
+  padding-left: 150px;
+}
+
+.dataDivider {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+table {
+  font-size: 12px;
+}
+
+.productOrder {
+  padding-left: 30px;
+}
+
+.tableData {
+  padding-left: 130px;
 }
 /*# sourceMappingURL=index.css.map */
