Added some icons and styles.
Implemented the Wisboo's library icons, and added some styles to the table's elements.

--- a/index.pug
+++ b/index.pug
@@ -3,14 +3,15 @@ html
     head 
         title Listado de ventas 
         link(rel="stylesheet", href="/styles/index.css")
-        link(rel="stylesheet", href="https: /2.cdn.wisboo.com/fonts/icons-wisboo/style.css")
+        link(rel="stylesheet", href="https://2.cdn.wisboo.com/fonts/icons-wisboo/style.css")
     body
       header
         section
           ul(class="sales")
             li Ventas de la academia
           ul(class="options") 
-            button(id="btn") EXPORTAR 
+            button(id="btn")
+              span(class="icon-file_download---material") &nbsp; EXPORTAR
             button(id="btn1") REGISTRAR UNA VENTA
         br
         br
@@ -38,7 +39,8 @@ html
           div(class="mainContent")
             div(class="filters")
               ul
-                input(placeholder='Busca por #orden o comprador') 
+                input(class="searchBar", placeholder='Busca por #orden o comprador') 
+                span(class="icon-Buscar")
                 select
                   option Curso
                 select 
@@ -48,18 +50,125 @@ html
                 input(type='date')
             div 
               ul(class="categories") 
-                h6 # Orden 
-                h6 # Curso 
-                h6(class="salesData") Comprador
-                h6(class="salesData") Fecha 
-                h6(class="salesData") Estado 
-                h6(class="salesData") Ganancias    
+                h5(class="order") # Orden &nbsp;
+                  span(class="icon-Filtrar")
+                h5(class="order") # Curso &nbsp;
+                  span(class="icon-Filtrar")
+                h5(class="salesData") Comprador &nbsp;
+                  span(class="icon-Filtrar")
+                h5(class="salesData") Fecha &nbsp;
+                  span(class="icon-Filtrar")
+                h5(class="salesData") Estado &nbsp;
+                  span(class="icon-Filtrar")
+                h5(class="salesData") Ganancias  &nbsp;
+                  span(class="icon-Filtrar")
             hr(class="dataDivider")
             table 
               tr 
                 td(class="productOrder") 10063-0021
-                td(class="productOrder") Baby Monitor Technology
+                td(class="course") Baby Monitor Technology
                 td(class="tableData") Aaron Almaraz 
                 td(class="tableData") 19 Dec 2020
                 td(class="tableData") Comprobante
-                td(class="tableData") USD $50
+                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td
+                  span(class="icon-Menu-Tres-Puntos")
+            hr(class="dataDivider")    
+            table      
+              tr 
+                td(class="productOrder") 10063-0021
+                td(class="course") Baby Monitor Technology
+                td(class="tableData") Aaron Almaraz 
+                td(class="tableData") 19 Dec 2020
+                td(class="tableData") Comprobante
+                td(class="tableData") USD $50  &nbsp; &nbsp;
+                td
+                  span(class="icon-Menu-Tres-Puntos")
+            hr(class="dataDivider")    
+            table      
+              tr 
+                td(class="productOrder") 10063-0021
+                td(class="course") Baby Monitor Technology
+                td(class="tableData") Aaron Almaraz 
+                td(class="tableData") 19 Dec 2020
+                td(class="tableData") Comprobante
+                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td
+                  span(class="icon-Menu-Tres-Puntos")
+            hr(class="dataDivider")    
+            table      
+              tr 
+                td(class="productOrder") 10063-0021
+                td(class="course") Baby Monitor Technology
+                td(class="tableData") Aaron Almaraz 
+                td(class="tableData") 19 Dec 2020
+                td(class="tableData") Comprobante
+                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td
+                  span(class="icon-Menu-Tres-Puntos")
+            hr(class="dataDivider")    
+            table      
+              tr 
+                td(class="productOrder") 10063-0021
+                td(class="course") Baby Monitor Technology
+                td(class="tableData") Aaron Almaraz 
+                td(class="tableData") 19 Dec 2020
+                td(class="tableData") Comprobante
+                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td
+                  span(class="icon-Menu-Tres-Puntos")
+            hr(class="dataDivider")    
+            table      
+              tr 
+                td(class="productOrder") 10063-0021
+                td(class="course") Baby Monitor Technology
+                td(class="tableData") Aaron Almaraz 
+                td(class="tableData") 19 Dec 2020
+                td(class="tableData") Comprobante
+                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td
+                  span(class="icon-Menu-Tres-Puntos")
+            hr(class="dataDivider")    
+            table      
+              tr 
+                td(class="productOrder") 10063-0021
+                td(class="course") Baby Monitor Technology
+                td(class="tableData") Aaron Almaraz 
+                td(class="tableData") 19 Dec 2020
+                td(class="tableData") Comprobante
+                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td
+                  span(class="icon-Menu-Tres-Puntos")
+            hr(class="dataDivider")    
+            table      
+              tr 
+                td(class="productOrder") 10063-0021
+                td(class="course") Baby Monitor Technology
+                td(class="tableData") Aaron Almaraz 
+                td(class="tableData") 19 Dec 2020
+                td(class="tableData") Comprobante
+                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td
+                  span(class="icon-Menu-Tres-Puntos")
+            hr(class="dataDivider")    
+            table      
+              tr 
+                td(class="productOrder") 10063-0021
+                td(class="course") Baby Monitor Technology
+                td(class="tableData") Aaron Almaraz 
+                td(class="tableData") 19 Dec 2020
+                td(class="tableData") Comprobante
+                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td
+                  span(class="icon-Menu-Tres-Puntos")
+            hr(class="dataDivider")    
+            table      
+              tr 
+                td(class="productOrder") 10063-0021
+                td(class="course") Baby Monitor Technology
+                td(class="tableData") Aaron Almaraz 
+                td(class="tableData") 19 Dec 2020
+                td(class="tableData") Comprobante
+                td(class="tableData") USD $50      &nbsp; &nbsp;  
+                td
+                  span(class="icon-Menu-Tres-Puntos")                         
