--- a/styles/index.css
+++ b/styles/index.css
@@ -39,6 +39,10 @@ ul {
   text-decoration: none;
 }
 
+#btn span {
+  font-weight: 700;
+}
+
 #btn1 {
   border-radius: 6px;
   font-family: 'Be Vietnam Pro', sans-serif;
@@ -96,13 +100,18 @@ h4 {
   font-weight: 500;
 }
 
+.icon-Buscar {
+  position: absolute;
+  padding-left: 36px;
+}
+
 .mainContent {
   background-color: #ffffff;
   margin-top: 30px;
   border-radius: 10px;
   border: solid 1px;
   border-color: #b8b7b5;
-  height: 500px;
+  height: 540px;
   padding-top: 36px;
   margin-bottom: 50px;
   width: 1180px;
@@ -111,6 +120,7 @@ h4 {
 
 .mainContent .filters {
   margin-right: 40px;
+  position: relative;
 }
 
 .mainContent input {
@@ -132,15 +142,16 @@ h4 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin-right: 50px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-right: 30px;
   color: #797979;
   font-weight: 100;
 }
 
 .mainContent .salesData {
-  padding-left: 150px;
+  padding-right: 50px;
 }
 
 .dataDivider {
@@ -152,8 +163,13 @@ table {
   font-size: 12px;
 }
 
-.productOrder {
+.productOrder, .course {
   padding-left: 30px;
+}
+
+.productOrder {
+  color: #2980c7;
+  text-decoration: underline;
 }
 
 .tableData {
