--- a/styles/index.scss
+++ b/styles/index.scss
@@ -37,10 +37,14 @@ ul {
     padding: 7px 7px 7px 7px;
     border: solid #c2c2c2 2px;
     text-decoration: none;
-  
+    
   
   .btn:hover {
     text-decoration: none;
+  }
+
+  span {
+      font-weight: 700;
   }
 
 }  
@@ -98,13 +102,18 @@ h4 {
 
 }
 
+.icon-Buscar {
+    position: absolute;
+    padding-left: 36px;
+}
+
 .mainContent {
     background-color: #ffffff;
     margin-top: 30px;
     border-radius: 10px;
     border: solid 1px;
     border-color: rgb(184, 183, 181);
-    height: 500px;
+    height: 540px;
     padding-top: 36px;
     margin-bottom: 50px;
     width: 1180px;
@@ -112,6 +121,7 @@ h4 {
 
     .filters {
         margin-right: 40px;
+        position: relative;
     }
 
     input {
@@ -131,14 +141,14 @@ h4 {
 
     .categories {
         display: flex;
-        justify-content: space-around;
-        margin-right: 50px;
+        justify-content: space-between;
+        margin-right: 30px;
         color:rgb(121, 121, 121);
         font-weight: 100;
     }
 
     .salesData {
-        padding-left: 150px;
+        padding-right: 50px;
     }
 }
 
@@ -151,8 +161,13 @@ table {
     font-size: 12px;
 }
 
-.productOrder {
+.productOrder, .course {
     padding-left: 30px;
+}
+
+.productOrder {
+    color:rgb(41, 128, 199);
+    text-decoration: underline;
 }
 
 .tableData {
