Finished the table's structure and implemented some media queries.
Aligned the table's content and tried some media queries for smartphones.

--- a/index.pug
+++ b/index.pug
@@ -4,6 +4,7 @@ html
         title Listado de ventas 
         link(rel="stylesheet", href="/styles/index.css")
         link(rel="stylesheet", href="https://2.cdn.wisboo.com/fonts/icons-wisboo/style.css")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
     body
       header
         section
@@ -39,8 +40,8 @@ html
           div(class="mainContent")
             div(class="filters")
               ul
-                input(class="searchBar", placeholder='Busca por #orden o comprador') 
                 span(class="icon-Buscar")
+                input(class="searchBar", placeholder='Busca por #orden o comprador...') 
                 select
                   option Curso
                 select 
@@ -51,17 +52,17 @@ html
             div(class="categories")
               table
                 tr
-                  td(id="order") # Orden &nbsp;
+                  td(id="order") # Orden 
                     span(class="icon-Filtrar")
-                  td(class="course") # Curso &nbsp;
+                  td(class="course") &emsp;&emsp;&emsp;&emsp;&emsp; # Curso 
                     span(class="icon-Filtrar")
-                  td(class="salesData") Comprador &nbsp;
+                  td(class="salesData") Comprador 
                     span(class="icon-Filtrar")
-                  td(class="salesData") Fecha &nbsp;
+                  td(class="salesData") Fecha 
                     span(class="icon-Filtrar") 
-                  td(class="salesData") Estado &nbsp;
+                  td(class="salesData") Estado 
                     span(class="icon-Filtrar")
-                  td(class="salesData") Ganancias  &nbsp;
+                  td(class="salesData") Ganancias  
                     span(class="icon-Filtrar")
             hr(class="dataDivider")
             table 
@@ -71,7 +72,7 @@ html
                 td(class="tableData") Aaron Almaraz 
                 td(class="tableData") 19 Dec 2020
                 td(class="receipt") Comprobante 
-                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td(class="tableData") &emsp;&emsp;&emsp;&emsp; USD $50 
                 td
                   span(class="icon-Menu-Tres-Puntos")
             hr(class="dataDivider")    
@@ -82,7 +83,7 @@ html
                 td(class="tableData") Aaron Almaraz 
                 td(class="tableData") 19 Dec 2020
                 td(class="receipt") Comprobante 
-                td(class="tableData") USD $50  &nbsp; &nbsp;
+                td(class="tableData") &emsp;&emsp;&emsp;&emsp; USD $50   
                 td
                   span(class="icon-Menu-Tres-Puntos")
             hr(class="dataDivider")    
@@ -93,7 +94,7 @@ html
                 td(class="tableData") Aaron Almaraz 
                 td(class="tableData") 19 Dec 2020
                 td(class="payed") Pagada
-                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td(class="tableData") &emsp;&emsp;&emsp;&emsp; USD $50  
                 td
                   span(class="icon-Menu-Tres-Puntos")
             hr(class="dataDivider")    
@@ -104,7 +105,7 @@ html
                 td(class="tableData") Aaron Almaraz 
                 td(class="tableData") 19 Dec 2020
                 td(class="pending") Pendiente
-                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td(class="tableData") &emsp;&emsp;&emsp;&emsp; USD $50  
                 td
                   span(class="icon-Menu-Tres-Puntos")
             hr(class="dataDivider")    
@@ -115,7 +116,7 @@ html
                 td(class="tableData") Aaron Almaraz 
                 td(class="tableData") 19 Dec 2020
                 td(class="payed") Pagada
-                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td(class="tableData") &emsp;&emsp;&emsp;&emsp; USD $50  
                 td
                   span(class="icon-Menu-Tres-Puntos")
             hr(class="dataDivider")     
@@ -126,7 +127,7 @@ html
                 td(class="tableData") Aaron Almaraz 
                 td(class="tableData") 19 Dec 2020
                 td(class="rejected") Rechazada
-                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td(class="tableData") &emsp;&emsp;&emsp;&emsp; USD $50  
                 td
                   span(class="icon-Menu-Tres-Puntos")
             hr(class="dataDivider")    
@@ -137,7 +138,7 @@ html
                 td(class="tableData") Aaron Almaraz 
                 td(class="tableData") 19 Dec 2020
                 td(class="payed") Pagada
-                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td(class="tableData") &emsp;&emsp;&emsp;&emsp; USD $50  
                 td
                   span(class="icon-Menu-Tres-Puntos")
             hr(class="dataDivider")    
@@ -148,7 +149,7 @@ html
                 td(class="tableData") Aaron Almaraz 
                 td(class="tableData") 19 Dec 2020
                 td(class="payed") Pagada
-                td(class="tableData") USD $50 &nbsp; &nbsp;
+                td(class="tableData") &emsp;&emsp;&emsp;&emsp; USD $50  
                 td
                   span(class="icon-Menu-Tres-Puntos")
             hr(class="dataDivider")    
@@ -159,6 +160,6 @@ html
                 td(class="tableData") Aaron Almaraz 
                 td(class="tableData") 19 Dec 2020
                 td(class="payed") Pagada
-                td(class="tableData") USD $50      &nbsp; &nbsp;  
+                td(class="tableData") &emsp;&emsp;&emsp;&emsp; USD $50         
                 td
                   span(class="icon-Menu-Tres-Puntos")                         
