--- a/styles/index.css
+++ b/styles/index.css
@@ -115,7 +115,7 @@ h4 {
   border-radius: 10px;
   border: solid 1px;
   border-color: #b8b7b5;
-  height: 60vh;
+  height: 64vh;
   padding-top: 36px;
   margin-bottom: 50px;
   width: 1180px;
@@ -148,12 +148,14 @@ h4 {
 }
 
 main {
-  font-size: 12px;
+  font-size: 13px;
 }
 
 table {
   margin-left: 60px;
   width: 167vh;
+  font-weight: 500;
+  color: #666565;
 }
 
 .categories {
@@ -195,15 +197,14 @@ table {
   text-align: center;
 }
 
-@media only screen and (min-width: 320px) {
+@media only screen and (max-width: 768px) {
   body {
     height: 50vh;
-    margin: 0;
-    padding: 0;
+    margin: 0px 100px 0 100px;
   }
   header, .earnings {
-    display: block;
     width: 50vw;
+    display: inline;
   }
   .card, ul {
     margin-top: 10px;
@@ -215,11 +216,12 @@ table {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    width: 60vh;
   }
   .mainContent {
     width: 40vh;
     height: 43vh;
-    margin-right: 70px;
+    margin-right: 200px;
   }
   .mainContent .categories, .mainContent table, .mainContent hr, .mainContent span {
     display: none;
@@ -228,50 +230,5 @@ table {
     width: 90%;
     margin-top: 10px;
   }
-}
-
-@media only screen and (min-width: 768px) {
-  body {
-    max-width: 100px;
-  }
-  .earnings {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    margin-top: 10px;
-  }
-  .earnings .card {
-    width: 10vw;
-    height: 22vh;
-    margin-left: 3px;
-    margin-right: 3px;
-  }
-  main {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-top: 10px;
-  }
-  .mainContent {
-    width: 100vw;
-    height: 25vh;
-    margin-right: 70px;
-  }
-  .mainContent .categories, .mainContent table, .mainContent hr, .mainContent span {
-    display: none;
-  }
-  .mainContent input, .mainContent select {
-    width: 80vw;
-    margin-top: 10px;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  /* Styles here */
 }
 /*# sourceMappingURL=index.css.map */
