--- a/styles/index.scss
+++ b/styles/index.scss
@@ -117,7 +117,7 @@ h4 {
     border-radius: 10px;
     border: solid 1px;
     border-color: rgb(184, 183, 181);
-    height: 60vh;
+    height: 64vh;
     padding-top: 36px;
     margin-bottom: 50px;
     width: 1180px;
@@ -150,13 +150,15 @@ h4 {
 }
 
 main {
-    font-size: 12px;
+    font-size: 13px;
     
 }
 
 table {
     margin-left: 60px;
     width: 167vh;
+    font-weight: 500;
+    color:#666565;
 }
 
 .categories {
@@ -199,19 +201,18 @@ table {
 }
 
 @media only screen 
-   and (min-width : 320px) {
+   and (max-width : 768px) {
    
 
     body {
         height: 50vh;
-        margin: 0;
-        padding: 0;
+        margin: 0px 100px 0 100px;
         
     }
     
     header, .earnings {
-        display: block;
         width: 50vw;
+        display: inline;
     }
 
     .card, ul {
@@ -221,13 +222,13 @@ table {
     main {
         display: flex;
         justify-content: center;
-        
+        width: 60vh;
     }
 
     .mainContent {
         width: 40vh;
         height: 43vh;
-        margin-right: 70px;
+        margin-right: 200px;
 
         .categories, table, hr, span {
             display: none;
@@ -239,54 +240,4 @@ table {
             
         }
     }
-}
-
-@media only screen 
-   and (min-width : 768px) {
-   
-
-    body {
-        max-width: 100px;
-        
-    }
-
-    .earnings {
-       display: flex;
-       justify-content: space-around;
-       margin-top: 10px;
-       
-       .card {
-           width: 10vw;
-           height: 22vh;
-           margin-left: 3px;
-           margin-right: 3px;
-       }
-    }
-
-    main {
-        display: flex;
-        justify-content: center;
-        margin-top: 10px;
-    }
-
-    .mainContent {
-        width: 100vw;
-        height: 25vh;
-        margin-right: 70px;
-
-        .categories, table, hr, span {
-            display: none;
-        }
-
-        input, select {
-            width: 80vw;
-            margin-top: 10px;
-            
-        }
-    }    
-}
-
-@media only screen 
-   and (min-width : 1200px) {
-   /* Styles here */
 }
